samples/_failures_safe/1761260851_ced760_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86739bba.c: In function ‘main’:
./samples/SAFE/__tmp_86739bba.c:155:25: error: missing terminating " character
  155 |     input_matrix(&mat2, "B
      |                         ^~
./samples/SAFE/__tmp_86739bba.c:155:5: error: expected expression at end of input
  155 |     input_matrix(&mat2, "B
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_86739bba.c:155:5: error: expected declaration or statement at end of input
